// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`progress-bar/ProgressBar snapshot tests  1`] = `
@keyframes animation-0 {
  from {
    -webkit-transform: translateX(-100%);
    -ms-transform: translateX(-100%);
    transform: translateX(-100%);
  }

  to {
    -webkit-transform: translateX(200px);
    -ms-transform: translateX(200px);
    transform: translateX(200px);
  }
}

.emotion-3 {
  position: relative;
  border-radius: 2px;
  background-color: rgba(0,0,0,0.05);
  overflow: hidden;
  width: 100%;
  height: 4px;
}

.emotion-2 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: -3px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-transition: width 0.3s ease-in-out;
  transition: width 0.3s ease-in-out;
  width: 100%;
  -webkit-animation: 2s linear infinite animation-0;
  animation: 2s linear infinite animation-0;
}

.emotion-0 {
  background-color: transparent;
  -webkit-flex: 1 1 0;
  -ms-flex: 1 1 0;
  flex: 1 1 0;
}

.emotion-0:before {
  content: "";
  position: absolute;
  right: 2px;
  width: 200px;
  height: 4px;
  background-image: linear-gradient(135deg,transparent,#38abdf 100%);
  background-size: 200px 4px;
}

.emotion-1 {
  fill: #38abdf;
}

<div
  aria-valuemax="100"
  aria-valuemin="0"
  className="emotion-3"
  role="progressbar"
>
  <div
    className="emotion-2"
  >
    <div
      className="emotion-0"
    />
    <svg
      height="4px"
      version="1.1"
      viewBox="0 0 3 4"
      width="3px"
      xmlns="http://www.w3.org/2000/svg"
      xmlnsXlink="http://www.w3.org/1999/xlink"
    >
      <polygon
        className="emotion-1"
        id="end-right"
        points="0 0 2.68 0 1 4 0 4"
      />
    </svg>
  </div>
</div>
`;

exports[`progress-bar/ProgressBar snapshot tests  2`] = `
.emotion-3 {
  position: relative;
  border-radius: 2px;
  background-color: rgba(0,0,0,0.05);
  overflow: hidden;
  width: 100%;
  height: 4px;
}

.emotion-1 {
  fill: #38abdf;
}

.emotion-2 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: -3px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-transition: width 0.3s ease-in-out;
  transition: width 0.3s ease-in-out;
  width: 33%;
}

.emotion-0 {
  background-color: #38abdf;
  -webkit-flex: 1 1 0;
  -ms-flex: 1 1 0;
  flex: 1 1 0;
}

<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow={33}
  className="emotion-3"
  role="progressbar"
>
  <div
    className="emotion-2"
  >
    <div
      className="emotion-0"
    />
    <svg
      height="4px"
      version="1.1"
      viewBox="0 0 3 4"
      width="3px"
      xmlns="http://www.w3.org/2000/svg"
      xmlnsXlink="http://www.w3.org/1999/xlink"
    >
      <polygon
        className="emotion-1"
        id="end-right"
        points="0 0 2.68 0 1 4 0 4"
      />
    </svg>
  </div>
</div>
`;

exports[`progress-bar/ProgressBar snapshot tests  3`] = `
@keyframes animation-0 {
  from {
    -webkit-transform: translateX(-100%);
    -ms-transform: translateX(-100%);
    transform: translateX(-100%);
  }

  to {
    -webkit-transform: translateX(200px);
    -ms-transform: translateX(200px);
    transform: translateX(200px);
  }
}

.emotion-3 {
  position: relative;
  border-radius: 2px;
  background-color: rgba(0,0,0,0.05);
  overflow: hidden;
  width: 100%;
  height: 4px;
}

.emotion-2 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: -3px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-transition: width 0.3s ease-in-out;
  transition: width 0.3s ease-in-out;
  width: 100%;
  -webkit-animation: 2s linear infinite animation-0;
  animation: 2s linear infinite animation-0;
}

.emotion-0 {
  background-color: transparent;
  -webkit-flex: 1 1 0;
  -ms-flex: 1 1 0;
  flex: 1 1 0;
}

.emotion-0:before {
  content: "";
  position: absolute;
  right: 2px;
  width: 200px;
  height: 4px;
  background-image: linear-gradient(135deg,transparent,#38abdf 100%);
  background-size: 200px 4px;
}

.emotion-1 {
  fill: #38abdf;
}

<div
  aria-valuemax="100"
  aria-valuemin="0"
  className="emotion-3 myClass-a myClass-b"
  role="progressbar"
>
  <div
    className="emotion-2 myClass-a__progress-bar myClass-b__progress-bar"
  >
    <div
      className="emotion-0 myClass-a__fill myClass-b__fill"
    />
    <svg
      height="4px"
      version="1.1"
      viewBox="0 0 3 4"
      width="3px"
      xmlns="http://www.w3.org/2000/svg"
      xmlnsXlink="http://www.w3.org/1999/xlink"
    >
      <polygon
        className="emotion-1 myClass-a__polygon myClass-b__polygon"
        id="end-right"
        points="0 0 2.68 0 1 4 0 4"
      />
    </svg>
  </div>
</div>
`;

exports[`progress-bar/ProgressBar snapshot tests  4`] = `
@keyframes animation-0 {
  from {
    -webkit-transform: translateX(-100%);
    -ms-transform: translateX(-100%);
    transform: translateX(-100%);
  }

  to {
    -webkit-transform: translateX(200px);
    -ms-transform: translateX(200px);
    transform: translateX(200px);
  }
}

.emotion-2 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: -3px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-transition: width 0.3s ease-in-out;
  transition: width 0.3s ease-in-out;
  width: 100%;
  -webkit-animation: 2s linear infinite animation-0;
  animation: 2s linear infinite animation-0;
}

.emotion-0 {
  background-color: transparent;
  -webkit-flex: 1 1 0;
  -ms-flex: 1 1 0;
  flex: 1 1 0;
}

.emotion-0:before {
  content: "";
  position: absolute;
  right: 2px;
  width: 200px;
  height: 4px;
  background-image: linear-gradient(135deg,transparent,#38abdf 100%);
  background-size: 200px 4px;
}

.emotion-1 {
  fill: #38abdf;
}

.emotion-3 {
  position: relative;
  border-radius: 2px;
  background-color: red;
  overflow: hidden;
  width: 100%;
  height: 4px;
}

<div
  aria-valuemax="100"
  aria-valuemin="0"
  className="emotion-3"
  role="progressbar"
>
  <div
    className="emotion-2"
  >
    <div
      className="emotion-0"
    />
    <svg
      height="4px"
      version="1.1"
      viewBox="0 0 3 4"
      width="3px"
      xmlns="http://www.w3.org/2000/svg"
      xmlnsXlink="http://www.w3.org/1999/xlink"
    >
      <polygon
        className="emotion-1"
        id="end-right"
        points="0 0 2.68 0 1 4 0 4"
      />
    </svg>
  </div>
</div>
`;

exports[`progress-bar/ProgressBar snapshot tests custom stylesheet 1`] = `
@keyframes animation-0 {
  from {
    -webkit-transform: translateX(-100%);
    -ms-transform: translateX(-100%);
    transform: translateX(-100%);
  }

  to {
    -webkit-transform: translateX(200px);
    -ms-transform: translateX(200px);
    transform: translateX(200px);
  }
}

.emotion-2 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: -3px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-transition: width 0.3s ease-in-out;
  transition: width 0.3s ease-in-out;
  width: 100%;
  -webkit-animation: 2s linear infinite animation-0;
  animation: 2s linear infinite animation-0;
}

.emotion-0 {
  background-color: transparent;
  -webkit-flex: 1 1 0;
  -ms-flex: 1 1 0;
  flex: 1 1 0;
}

.emotion-0:before {
  content: "";
  position: absolute;
  right: 2px;
  width: 200px;
  height: 4px;
  background-image: linear-gradient(135deg,transparent,#38abdf 100%);
  background-size: 200px 4px;
}

.emotion-1 {
  fill: #38abdf;
}

.emotion-3 {
  position: relative;
  border-radius: 2px;
  background-color: red;
  overflow: hidden;
  width: 100%;
  height: 4px;
}

<div
  aria-valuemax="100"
  aria-valuemin="0"
  className="emotion-3"
  role="progressbar"
>
  <div
    className="emotion-2"
  >
    <div
      className="emotion-0"
    />
    <svg
      height="4px"
      version="1.1"
      viewBox="0 0 3 4"
      width="3px"
      xmlns="http://www.w3.org/2000/svg"
      xmlnsXlink="http://www.w3.org/1999/xlink"
    >
      <polygon
        className="emotion-1"
        id="end-right"
        points="0 0 2.68 0 1 4 0 4"
      />
    </svg>
  </div>
</div>
`;

exports[`progress-bar/ProgressBar snapshot tests determinate 1`] = `
.emotion-3 {
  position: relative;
  border-radius: 2px;
  background-color: rgba(0,0,0,0.05);
  overflow: hidden;
  width: 100%;
  height: 4px;
}

.emotion-1 {
  fill: #38abdf;
}

.emotion-2 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: -3px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-transition: width 0.3s ease-in-out;
  transition: width 0.3s ease-in-out;
  width: 33%;
}

.emotion-0 {
  background-color: #38abdf;
  -webkit-flex: 1 1 0;
  -ms-flex: 1 1 0;
  flex: 1 1 0;
}

<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow={33}
  className="emotion-3"
  role="progressbar"
>
  <div
    className="emotion-2"
  >
    <div
      className="emotion-0"
    />
    <svg
      height="4px"
      version="1.1"
      viewBox="0 0 3 4"
      width="3px"
      xmlns="http://www.w3.org/2000/svg"
      xmlnsXlink="http://www.w3.org/1999/xlink"
    >
      <polygon
        className="emotion-1"
        id="end-right"
        points="0 0 2.68 0 1 4 0 4"
      />
    </svg>
  </div>
</div>
`;

exports[`progress-bar/ProgressBar snapshot tests indeterminate 1`] = `
@keyframes animation-0 {
  from {
    -webkit-transform: translateX(-100%);
    -ms-transform: translateX(-100%);
    transform: translateX(-100%);
  }

  to {
    -webkit-transform: translateX(200px);
    -ms-transform: translateX(200px);
    transform: translateX(200px);
  }
}

.emotion-3 {
  position: relative;
  border-radius: 2px;
  background-color: rgba(0,0,0,0.05);
  overflow: hidden;
  width: 100%;
  height: 4px;
}

.emotion-2 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: -3px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-transition: width 0.3s ease-in-out;
  transition: width 0.3s ease-in-out;
  width: 100%;
  -webkit-animation: 2s linear infinite animation-0;
  animation: 2s linear infinite animation-0;
}

.emotion-0 {
  background-color: transparent;
  -webkit-flex: 1 1 0;
  -ms-flex: 1 1 0;
  flex: 1 1 0;
}

.emotion-0:before {
  content: "";
  position: absolute;
  right: 2px;
  width: 200px;
  height: 4px;
  background-image: linear-gradient(135deg,transparent,#38abdf 100%);
  background-size: 200px 4px;
}

.emotion-1 {
  fill: #38abdf;
}

<div
  aria-valuemax="100"
  aria-valuemin="0"
  className="emotion-3"
  role="progressbar"
>
  <div
    className="emotion-2"
  >
    <div
      className="emotion-0"
    />
    <svg
      height="4px"
      version="1.1"
      viewBox="0 0 3 4"
      width="3px"
      xmlns="http://www.w3.org/2000/svg"
      xmlnsXlink="http://www.w3.org/1999/xlink"
    >
      <polygon
        className="emotion-1"
        id="end-right"
        points="0 0 2.68 0 1 4 0 4"
      />
    </svg>
  </div>
</div>
`;

exports[`progress-bar/ProgressBar snapshot tests passing className 1`] = `
@keyframes animation-0 {
  from {
    -webkit-transform: translateX(-100%);
    -ms-transform: translateX(-100%);
    transform: translateX(-100%);
  }

  to {
    -webkit-transform: translateX(200px);
    -ms-transform: translateX(200px);
    transform: translateX(200px);
  }
}

.emotion-3 {
  position: relative;
  border-radius: 2px;
  background-color: rgba(0,0,0,0.05);
  overflow: hidden;
  width: 100%;
  height: 4px;
}

.emotion-2 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: -3px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-transition: width 0.3s ease-in-out;
  transition: width 0.3s ease-in-out;
  width: 100%;
  -webkit-animation: 2s linear infinite animation-0;
  animation: 2s linear infinite animation-0;
}

.emotion-0 {
  background-color: transparent;
  -webkit-flex: 1 1 0;
  -ms-flex: 1 1 0;
  flex: 1 1 0;
}

.emotion-0:before {
  content: "";
  position: absolute;
  right: 2px;
  width: 200px;
  height: 4px;
  background-image: linear-gradient(135deg,transparent,#38abdf 100%);
  background-size: 200px 4px;
}

.emotion-1 {
  fill: #38abdf;
}

<div
  aria-valuemax="100"
  aria-valuemin="0"
  className="emotion-3 myClass-a myClass-b"
  role="progressbar"
>
  <div
    className="emotion-2 myClass-a__progress-bar myClass-b__progress-bar"
  >
    <div
      className="emotion-0 myClass-a__fill myClass-b__fill"
    />
    <svg
      height="4px"
      version="1.1"
      viewBox="0 0 3 4"
      width="3px"
      xmlns="http://www.w3.org/2000/svg"
      xmlnsXlink="http://www.w3.org/1999/xlink"
    >
      <polygon
        className="emotion-1 myClass-a__polygon myClass-b__polygon"
        id="end-right"
        points="0 0 2.68 0 1 4 0 4"
      />
    </svg>
  </div>
</div>
`;
